<resources>
    <string name="app_name">User Management System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_dash">NAME :</string>
    <string name="email_dash">Email :</string>
    <string name="gender_dash">GENDER :</string>
</resources>